--- a/index.css
+++ b/index.css
@@ -39,6 +39,24 @@
   color: white;
 }
 
+.avatar-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5%;
+  background-color: var(--primary-color);
+}
+.avatar {
+  width: 20rem;
+  border: 2px solid white;
+  border-radius: 50%;
+}
+
+.avatar-h1 {
+  color: white;
+}
+
 /* RESPONSIVE */
 
 @media screen and (max-width: 992px) {
@@ -60,5 +78,14 @@
 
     display: flex;
     justify-content: center;
+  }
+
+  .avatar-container {
+    flex-direction: column-reverse;
+  }
+
+  .avatar {
+    width: 8rem;
+    margin-bottom: 2rem;
   }
 }
