--- a/index.css
+++ b/index.css
@@ -57,9 +57,56 @@
   color: white;
 }
 
+/* ARTICLES */
+
+.articles-h2 {
+  text-align: center;
+  margin: 15px 0;
+  font-size: 3rem;
+  color: var(--primary-color);
+}
+
+.articles-column {
+  display: flex;
+  justify-content: center;
+}
+
+.article-container {
+  width: 20rem;
+  height: 20rem;
+  margin: 10px;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+  background-color: var(--secondart-color);
+}
+
+.article-png {
+  width: 100%;
+  height: 70%;
+  object-fit: contain;
+}
+
+.article-btn {
+  padding: 5px;
+  width: 5rem;
+  border-radius: 20px;
+  text-transform: uppercase;
+  background-color: var(--primary-color);
+  cursor: pointer;
+  box-shadow: none;
+  color: white;
+  font-weight: bold;
+}
 /* RESPONSIVE */
 
 @media screen and (max-width: 992px) {
+  /* NAV  */
   .nav {
     flex-direction: column;
   }
@@ -87,5 +134,14 @@
   .avatar {
     width: 8rem;
     margin-bottom: 2rem;
+  }
+
+  .articles-column {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .articles-h2 {
+    font-size: 5vw;
   }
 }
